Initial integration of GPG service.
- Add gpg log in/out menu.
- Add leaderboard/achievement menu.
- Add hooks to gpg_manager.
- Has a dependency to CL/766854.

Change-Id: I0f7b646c6617bf7b333b121e06cc53ec90fb5264
Tested: on OSX.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@ limitations under the License.
 -->
 <resources>
     <string name="app_name">Zooshi</string>
-    <string name="app_id"></string>
+    <!-- App ID for the project -->
+    <string name="app_id">83157501420</string>
 </resources>
